# Cosmic

./: CMakeLists.txt  README.md
.github/workflows/: cmake-single-platform.yml
GUI/: CMakeLists.txt
GUI/Include/: GameScreen.hpp  InputController.hpp  MenuScreen.hpp
GUI/Source/: GameScreen.cpp  InputController.cpp  Main.cpp  MenuScreen.cpp  SfmlRenderer.cpp
Logic/: CMakeLists.txt
Logic/Include/: GameConfig.hpp  GameTypes.hpp  IEventListener.hpp  Map.hpp
Logic/Source/: GameEngine.cpp
Tests/: CMakeLists.txt
Tests/Source/: ApplicationTest.cpp  GameConfigTest.cpp  GameScreenTest.cpp  GameTypesTest.cpp  GhostModeControllerTest.cpp  IGameEngineTest.cpp  IGhostTest.cpp  InputControllerTest.cpp  MapTest.cpp  MenuScreenTest.cpp
core/: CMakeLists.txt
core/include/: Cosmic.hpp  Game.hpp  GameConfig.hpp  GameTypes.hpp  IEventListener.hpp  IGameEngine.hpp
core/src/: Cosmic.hpp  Game.cpp
core/src/core/: Log.hpp
core/src/event/: EventDispatcher.cpp  EventDispatcher.hpp  EventHandler.cpp  EventHandler.hpp  GameEvents.hpp  IBaseEventHandler.hpp  IEvent.hpp  IEventListener.hpp
diagrams/: Pacman2.0CD.vpp  pacman.vpp
gui/: CMakeLists.txt
gui/include/: App.hpp
gui/src/: main.cpp
tests/: CMakeLists.txt
tests/mocks/: MockEvent.hpp
tests/unit_tests/: Events.cpp
